Added simple cli interface for testing, added unit tests for the single features and improved project structure